fix height of feuerwerk on iphone

--- a/src/navbar/Navbar.css
+++ b/src/navbar/Navbar.css
@@ -26,7 +26,6 @@
 
 .feuerwerk {
     width: 50px;
-    height: max-content;
 }
 
 .navBarContainer {
